# ctr-native

./: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  build.bat  ctr_native.c  ctr_native.h  default_config.ini  game_includes.h  main.c  platform.h
docs/: MEMORY_MODEL.md
game/: BOTS.c  CAM.c  COLL.c  DecalHUD.c  GAMEPAD.c  GhostReplay.c  LHMatrix.c  PushBuffer.c  TEST_ConvertRotToMatrix.c  Vector.c  psyq_start.c  widescreen.c  zGlobal_DATA.c  zGlobal_RDATA.c
game/221/: 221_Full.c
game/222/: 222_Full.c
game/223/: 223_Full.c
game/224/: 224_Full.c
game/225/: 225_Full.c
game/226/: 226_00_DrawLevelOvr1P.c
game/228/: 228_00_DrawLevelOvr3P.c
game/229/: 229_00_DrawLevelOvr4P.c
game/230/: 230_00_MM_Battle_DrawIcon_Character.c  230_01_MM_TransitionInOut.c  230_02_MM_Title_MenuUpdate.c  230_03_MM_Title_SetTrophyDPP.c  230_04_MM_Title_CameraMove.c  230_05_MM_Title_ThTick.c  230_06_MM_Title_Init.c  230_07_MM_Title_CameraReset.c  230_09_30_MM_CheatCodes.c  230_31_MM_MenuProc_Main.c  230_32_MM_ToggleRows_PlayerCount.c  230_33_MM_MenuProc_1p2p.c  230_34_MM_MenuProc_2p3p4p.c  230_35_MM_ToggleRows_Difficulty.c  230_36_MM_MenuProc_Difficulty.c  230_37_MM_MenuProc_SingleCup.c  230_38_MM_MenuProc_NewLoad.c  230_39_MM_AdvNewLoad_GetMenuPtr.c  230_40_MM_Characters_AnimateColors.c  230_41_MM_Characters_GetNextDriver.c  230_42_MM_Characters_boolIsInvalid.c  230_43_MM_Characters_GetModelByName.c  230_44_MM_Characters_DrawWindows.c  230_45_MM_Characters_SetMenuLayout.c  230_46_MM_Characters_BackupIDs.c  230_47_MM_Characters_PreventOverlap.c  230_48_MM_Characters_RestoreIDs.c  230_49_MM_Characters_HideDrivers.c  230_50_MM_Characters_MenuProc.c  230_51_MM_TrackSelect_Video_SetDefaults.c  230_52_MM_TrackSelect_Video_State.c  230_53_MM_TrackSelect_Video_Draw.c  230_54_MM_TrackSelect_boolTrackOpen.c  230_55_MM_TrackSelect_Init.c  230_56_MM_TrackSelect_MenuProc.c  230_57_MM_TrackSelect_GetMenuPtr.c  230_58_MM_CupSelect_Init.c  230_59_MM_CupSelect_MenuProc.c  230_60_MM_Battle_CloseSubMenu.c  230_61_MM_Battle_DrawIcon_Weapon.c  (+29 more)
game/231/: 231_001_RB_Player_KillPlayer.c  231_010_RB_Hazard_ThCollide_Missile.c  231_013_RB_Potion_OnShatter_TeethSearch.c  231_015_RB_GenericMine_LInB.c  231_016_RB_GenericMine_ThTick.c  231_018_RB_TNT_ThTick_ThrowOffHead.c  231_021_RB_Explosion_ThTick.c  231_022_RB_Hazard_CollLevInst.c  231_023_RB_Hazard_InterpolateValue.c  231_024_RB_MovingExplosive_ThTick.c  231_025_RB_MovingExplosive_Explode.c  231_026_RB_Warpball_FadeAway.c  231_027_RB_Warpball_Death.c  231_034_RB_Warpball_ThTick.c  231_035_RB_MaskWeapon_FadeAway.c  231_036_RB_MaskWeapon_ThTick.c  231_037_RB_ShieldDark_ThTick_Pop.c  231_038_RB_ShieldDark_ThTick_Grow.c  231_041_RB_RainCloud_FadeAway.c  231_042_RB_RainCloud_ThTick.c  231_043_RB_RainCloud_Init.c  231_044_RB_Explosion_InitPotion.c  231_045_RB_Explosion_InitGeneric.c  231_047_RB_Blowup_ThTick.c  231_048_RB_Blowup_Init.c  231_050_RB_Burst_ThTick.c  231_052_RB_Burst_CollLevInst.c  231_053_RB_Burst_Init.c  231_056_RB_Baron_ThTick.c  231_057_RB_Baron_LInB.c  231_059_RB_Blade_LInB.c  231_061_068_RB_Crate.c  231_069_072_RB_Crystal.c  231_075_RB_CtrLetter_LInC.c  231_077_RB_CtrLetter_LInB.c  231_082_085_RB_Armadillo.c  231_086_088_RB_Fireball.c  231_089_091_RB_FlameJet.c  231_092_094_RB_Follower.c  231_095_098_RB_Fruit.c  (+17 more)
game/232/: 232_00_AH_WarpPad_GetSpawnPosRot.c  232_01_AH_WarpPad_AllWarppadNum.c  232_02_AH_WarpPad_MenuProc.c  232_03_AH_WarpPad_SpinRewards.c  232_04_AH_WarpPad_ThTick.c  232_05_AH_WarpPad_ThDestroy.c  232_06_AH_WarpPad_LInB.c  232_07_AH_Garage_ThDestroy.c  232_08_AH_Garage_Open.c  232_09_AH_Garage_ThTick.c  232_10_AH_Garage_LInB.c  232_11_AH_SaveObj_ThDestroy.c  232_12_AH_SaveObj_ThTick.c  232_13_AH_SaveObj_LInB.c  232_14_AH_Door_ThDestroy.c  232_15_AH_Door_ThTick.c  232_16_AH_Door_LInB.c  232_17_AH_Map_LoadSave_Prim.c  232_18_AH_Map_LoadSave_Full.c  232_19_AH_Map_HubArrow.c  232_20_AH_Map_HubArrowOutter.c  232_21_AH_Map_HubItems.c  232_22_AH_Map_Warppads.c  232_23_AH_Map_Main.c  232_24_AH_Pause_Destroy.c  232_25_AH_Pause_Draw.c  232_26_AH_Pause_Update.c  232_27_AH_HintMenu_FiveArrows.c  232_28_AH_HintMenu_MaskPosRot.c  232_29_AH_HintMenu_MenuProc.c  232_30_AH_MaskHint_Start.c  232_31_AH_MaskHint_boolCanSpawn.c  232_32_AH_MaskHint_SetAnim.c  232_33_AH_MaskHint_SpawnParticles.c  232_34_AH_MaskHint_LerpVol.c  232_35_AH_MaskHint_Update.c  AH_Door.c  AH_Garage.c  AH_MaskHint.c  AH_Pause.c  (+3 more)
game/233/: 233_01_CS_Thread_LInB.c  233_02_09_CS_ScriptCmd.c  233_09_CS_Instance_GetFrameData.c  233_10_CS_Instance_GetNumAnimFrames.c  233_11_CS_Instance_SafeCheckAnimFrame.c  233_12_CS_Instance_BoolPlaySound.c  233_13_CS_DestroyPodium_StartDriving.c  233_14_CS_Thread_UseOpcode.c  233_15_CS_Thread_AnimateScale.c  233_16_CS_Thread_MoveOnPath.c  233_17_CS_Thread_Particles.c  233_18_CS_Thread_InterpolateFramesMS.c  233_19_CS_LoadBossCallback.c  233_20_CS_LoadBoss.c  233_21_CS_Camera_ThTick_Boss.c  233_22_CS_Camera_BoolGotoBoss.c  233_23_CS_Camera_ThTick_Podium.c  233_24_CS_Thread_Init.c  233_25_CS_Instance_InitMatrix.c  233_26_CS_Podium_Prize_ThTick3.c  233_28_CS_Podium_Prize_ThTick1.c  233_29_CS_Podium_Prize_ThDestroy.c  233_30_CS_Podium_Prize_Init.c  233_31_CS_Podium_Stand_ThTick.c  233_32_CS_Podium_Stand_Init.c  233_33_CS_Podium_FullScene_Init.c  233_35_CS_Cutscene_Start.c  233_36_CS_BoxScene_InstanceSplitLines.c  233_37_40_CS_Garage.c  233_45_CS_Credits_DestroyCreditGhost.c  233_47_CS_Credits_Init.c  233_52_CS_Credits_DrawNames.c  233_53_CS_Credits_DrawEpilogue.c  233_Full.c  233_stubs.c  233_zGlobal_gGarage.c  CS_Camera.c  CS_Podium.c  CS_Thread.c  D233.c  (+1 more)
include/: common.h  ctr_math.h  decomp_functions.h  functions.h  gpu.h  macros.h  namespace_Camera.h  namespace_Ghost.h  namespace_Level.h  namespace_Proc.h  namespace_UI.h  namespace_Vehicle.h  ovr_230.h  ovr_231.h  ovr_233.h  regionsEXE.h  widescreen.h
platform/: native_audio.c  native_checkpoint.c  native_config.c  native_gpu.c  native_input.c  native_libapi.c  native_libgpu.c  native_memory.c  native_perf.c  native_platform.c  native_psyx_shell.c  native_renderer.c  native_renderer_backend.c
(+518 files in other folders)
